.config/backend/ingress-backend.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: backend-ingress
  namespace: default
spec:
  ingressClassName: nginx
  rules:
  - host: demo.localdev.me
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: spring-boot-app-service
            port:
              number: 8080

---
# alternate to ingress - external service configuration
# service configuration
# apiVersion: v1
# kind: Service
# metadata:
#   name: external-spring-boot-app-service
# spec:
#   selector:
#     app: spring-boot-app
#   type: LoadBalancer
#   ports:
#     - protocol: TCP
#       port: 8080
#       targetPort: 8080
#       nodePort: 30002
